infra/k8s/apps/media-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: media-cors
  namespace: data
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - "*"
    accessControlAllowMethods:
      - GET
      - PUT
      - HEAD
      - OPTIONS
    accessControlAllowOriginList:
      - https://app.alsamos.com
      - https://mail.alsamos.com
      - https://accounts.alsamos.com
    accessControlExposeHeaders:
      - ETag
    accessControlMaxAge: 3600
    addVaryHeader: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alsamos-media
  namespace: data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: data-media-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - media.alsamos.com
      secretName: alsamos-media-tls
  rules:
    - host: media.alsamos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
